Adicionar botão back to initial page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <input  class="form-control" aria-label="Sizing example input" type="text" id="city"/>
                
               </div>
-              <a href="#" class="btn btn-success btn-lg" onclick="getWeather()"> Pesquisar </a>
+              <a href="#" class="btn btn-success btn-lg" onclick="getWeather()"> Pesquisar </a> <br>
+              <a href="./index.html" class="btn btn-warning btn-lg btnHide" id="hideButton"> Back to initial page </a>
             </div>
         </div>
     </div>
